--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -1,21 +1,33 @@
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 
-<GridPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-  <TextArea GridPane.rowIndex="0" GridPane.columnSpan="5"></TextArea>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER">%</Button>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="2" alignment="CENTER">CE</Button>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="3" alignment="CENTER">C</Button>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="4" alignment="CENTER">Delete</Button>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="5" alignment="CENTER">/</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="1" alignment="CENTER">SqRt</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="2" alignment="CENTER">7</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="3" alignment="CENTER">8</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="4" alignment="CENTER">9</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="5" alignment="CENTER">*</Button>
+<GridPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" >
 
+  <TextArea GridPane.rowIndex="0" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"/>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER" >%</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="2" alignment="CENTER">CE</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleInCPress">C</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="4" alignment="CENTER" >Delete</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleInDPress">/</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleSqRtPress">SqRt</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleIn7Press">7</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleIn8Press">8</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleIn9Press">9</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleInMPress">*</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleInSqPress">Square</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="2" alignment="CENTER">4</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="3" alignment="CENTER">5</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="4" alignment="CENTER">6</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="5" alignment="CENTER">-</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="1" alignment="CENTER">Cube</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="2" alignment="CENTER">1</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="3" alignment="CENTER">2</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="4" alignment="CENTER">3</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="5" alignment="CENTER">+</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="1" alignment="CENTER">Invert</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="2" alignment="CENTER">(-)</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER">0</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER">.</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER">=</Button>
 </GridPane>
