--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -3,7 +3,8 @@
 <?import javafx.scene.control.TextArea?>
 
 <GridPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" >
-
+  <!--Todo: Input sanitization, don't allow operations with with no input. -->
+  <!-- Pretty sure the above is done and working, however I haven't verified it the most -->
   <TextArea GridPane.rowIndex="0" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"/>
   <Button GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER" >%</Button>
   <Button GridPane.rowIndex="1" GridPane.columnIndex="2" alignment="CENTER" >CE</Button>
@@ -20,14 +21,14 @@
   <Button GridPane.rowIndex="3" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle5Press">5</Button>
   <Button GridPane.rowIndex="3" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle6Press">6</Button>
   <Button GridPane.rowIndex="3" GridPane.columnIndex="5" alignment="CENTER">-</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="1" alignment="CENTER">Cube</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleCuPress">Cube</Button>
   <Button GridPane.rowIndex="4" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle1Press">1</Button>
   <Button GridPane.rowIndex="4" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle2Press">2</Button>
   <Button GridPane.rowIndex="4" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle3Press">3</Button>
   <Button GridPane.rowIndex="4" GridPane.columnIndex="5" alignment="CENTER">+</Button>
   <Button GridPane.rowIndex="5" GridPane.columnIndex="1" alignment="CENTER">Invert</Button>
   <Button GridPane.rowIndex="5" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleNegatePress">(-)</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER">0</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER">.</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress">=</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle0Press">0</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDotPress">.</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress">=</Button> <!--Todo: Finish handling operations. -->
 </GridPane>
