--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -5,7 +5,7 @@
 <GridPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" >
   <!--Todo: Input sanitization, don't allow operations with with no input. -->
   <!-- Pretty sure the above is done and working, however I haven't verified it the most -->
-  <TextArea GridPane.rowIndex="0" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"/>
+  <TextArea GridPane.rowIndex="0" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"> </TextArea>
   <Button GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER" >%</Button>
   <Button GridPane.rowIndex="1" GridPane.columnIndex="2" alignment="CENTER" >CE</Button>
   <Button GridPane.rowIndex="1" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleCPress">C</Button>
