Finished Redo. It works?

--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -6,10 +6,10 @@
   <!--Todo: Input sanitization, don't allow operations with with no input. -->
   <!-- Pretty sure the above is done and working, however I haven't verified it the most -->
   <Button GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.columnSpan="2" onAction="#Undo">Undo</Button>
-  <Button GridPane.rowIndex="0" GridPane.columnIndex="5" GridPane.columnSpan="2" >Redo</Button>
+  <Button GridPane.rowIndex="0" GridPane.columnIndex="5" GridPane.columnSpan="2" onAction="#Redo">Redo</Button>
   <TextArea GridPane.rowIndex="1" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"> </TextArea>
   <Button GridPane.rowIndex="2" GridPane.columnIndex="1" alignment="CENTER" onAction="#handlePercentPress">%</Button>
-  <Button GridPane.rowIndex="2" GridPane.columnIndex="2" alignment="CENTER" >CE</Button>
+  <Button GridPane.rowIndex="2" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleCEPress">CE</Button>
   <Button GridPane.rowIndex="2" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleCPress">C</Button>
   <Button GridPane.rowIndex="2" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDeletePress">Delete</Button>
   <Button GridPane.rowIndex="2" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleDividePress">/</Button>
@@ -28,7 +28,7 @@
   <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle2Press">2</Button>
   <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle3Press">3</Button>
   <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleAddPress">+</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="1" alignment="CENTER" >Invert</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleInvertPress">Invert</Button>
   <Button GridPane.rowIndex="6" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleNegatePress">(-)</Button>
   <Button GridPane.rowIndex="6" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle0Press">0</Button>
   <Button GridPane.rowIndex="6" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDotPress">.</Button>
