--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.TextArea?>
 
 <GridPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" >
-  <!--Todo: Input sanitization, don't allow operations with with no input. -->
-  <!-- Pretty sure the above is done and working, however I haven't verified it the most -->
   <Button GridPane.rowIndex="0" GridPane.columnIndex="1" GridPane.columnSpan="2" onAction="#Undo">Undo</Button>
   <Button GridPane.rowIndex="0" GridPane.columnIndex="5" GridPane.columnSpan="2" onAction="#Redo">Redo</Button>
   <TextArea GridPane.rowIndex="1" GridPane.columnSpan="6" editable="false" fx:id="mainWriteArea"> </TextArea>
@@ -32,5 +30,5 @@
   <Button GridPane.rowIndex="6" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleNegatePress">(-)</Button>
   <Button GridPane.rowIndex="6" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle0Press">0</Button>
   <Button GridPane.rowIndex="6" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDotPress">.</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress">=</Button> <!--Todo: Finish handling operations. -->
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress">=</Button>
 </GridPane>
