--- a/Calculator/src/sample/sample.fxml
+++ b/Calculator/src/sample/sample.fxml
@@ -26,32 +26,32 @@
     <RowConstraints vgrow="SOMETIMES" minHeight="10" percentHeight="12" prefHeight="100" />
     <RowConstraints vgrow="SOMETIMES" minHeight="1" percentHeight="1" prefHeight="1" />
   </rowConstraints>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="2" onAction="#Undo" maxWidth="Infinity" textAlignment="CENTER">Undo</Button>
-  <Button GridPane.rowIndex="1" GridPane.columnIndex="4" GridPane.columnSpan="2" onAction="#Redo" maxWidth="Infinity" textAlignment="CENTER">Redo</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="2" onAction="#Undo" maxWidth="Infinity" maxHeight="Infinity" textAlignment="CENTER">Undo</Button>
+  <Button GridPane.rowIndex="1" GridPane.columnIndex="4" GridPane.columnSpan="2" onAction="#Redo" maxWidth="Infinity" maxHeight="Infinity" textAlignment="CENTER">Redo</Button>
   <TextArea GridPane.rowIndex="2" GridPane.columnIndex="1" GridPane.columnSpan="5" editable="false" fx:id="mainWriteArea" text=" "/>
-  <Button GridPane.rowIndex="3" GridPane.columnIndex="1" alignment="CENTER" onAction="#handlePercentPress" maxWidth="Infinity">%</Button>
-  <Button GridPane.rowIndex="3" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleCEPress" maxWidth="Infinity">CE</Button>
-  <Button GridPane.rowIndex="3" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleCPress" maxWidth="Infinity">C</Button>
-  <Button GridPane.rowIndex="3" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDeletePress" maxWidth="Infinity">Delete</Button>
-  <Button GridPane.rowIndex="3" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleDividePress" maxWidth="Infinity">/</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleSqRtPress" maxWidth="Infinity">SqRt</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle7Press" maxWidth="Infinity">7</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle8Press" maxWidth="Infinity">8</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle9Press" maxWidth="Infinity">9</Button>
-  <Button GridPane.rowIndex="4" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleMultiplyPress" maxWidth="Infinity">*</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleSqPress" maxWidth="Infinity">Square</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle4Press" maxWidth="Infinity">4</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle5Press" maxWidth="Infinity">5</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle6Press" maxWidth="Infinity">6</Button>
-  <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleSubtractPress" maxWidth="Infinity">-</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleCuPress" maxWidth="Infinity">Cube</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle1Press" maxWidth="Infinity">1</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle2Press" maxWidth="Infinity">2</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle3Press" maxWidth="Infinity">3</Button>
-  <Button GridPane.rowIndex="6" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleAddPress" maxWidth="Infinity">+</Button>
-  <Button GridPane.rowIndex="7" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleInvertPress" maxWidth="Infinity">Invert</Button>
-  <Button GridPane.rowIndex="7" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleNegatePress" maxWidth="Infinity">(-)</Button>
-  <Button GridPane.rowIndex="7" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle0Press" maxWidth="Infinity">0</Button>
-  <Button GridPane.rowIndex="7" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDotPress" maxWidth="Infinity">.</Button>
-  <Button GridPane.rowIndex="7" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress" maxWidth="Infinity">=</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="1" alignment="CENTER" onAction="#handlePercentPress" maxWidth="Infinity" maxHeight="Infinity">%</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleCEPress" maxWidth="Infinity" maxHeight="Infinity">CE</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="3" alignment="CENTER" onAction="#handleCPress" maxWidth="Infinity" maxHeight="Infinity">C</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDeletePress" maxWidth="Infinity" maxHeight="Infinity">Delete</Button>
+  <Button GridPane.rowIndex="3" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleDividePress" maxWidth="Infinity" maxHeight="Infinity">/</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleSqRtPress" maxWidth="Infinity" maxHeight="Infinity">SqRt</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle7Press" maxWidth="Infinity" maxHeight="Infinity">7</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle8Press" maxWidth="Infinity" maxHeight="Infinity">8</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle9Press" maxWidth="Infinity" maxHeight="Infinity">9</Button>
+  <Button GridPane.rowIndex="4" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleMultiplyPress" maxWidth="Infinity" maxHeight="Infinity">*</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleSqPress" maxWidth="Infinity" maxHeight="Infinity">Square</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle4Press" maxWidth="Infinity" maxHeight="Infinity">4</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle5Press" maxWidth="Infinity" maxHeight="Infinity">5</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle6Press" maxWidth="Infinity" maxHeight="Infinity">6</Button>
+  <Button GridPane.rowIndex="5" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleSubtractPress" maxWidth="Infinity" maxHeight="Infinity">-</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleCuPress" maxWidth="Infinity" maxHeight="Infinity">Cube</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="2" alignment="CENTER" onAction="#handle1Press" maxWidth="Infinity" maxHeight="Infinity">1</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle2Press" maxWidth="Infinity" maxHeight="Infinity">2</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="4" alignment="CENTER" onAction="#handle3Press" maxWidth="Infinity" maxHeight="Infinity">3</Button>
+  <Button GridPane.rowIndex="6" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleAddPress" maxWidth="Infinity" maxHeight="Infinity">+</Button>
+  <Button GridPane.rowIndex="7" GridPane.columnIndex="1" alignment="CENTER" onAction="#handleInvertPress" maxWidth="Infinity" maxHeight="Infinity">Invert</Button>
+  <Button GridPane.rowIndex="7" GridPane.columnIndex="2" alignment="CENTER" onAction="#handleNegatePress" maxWidth="Infinity" maxHeight="Infinity">(-)</Button>
+  <Button GridPane.rowIndex="7" GridPane.columnIndex="3" alignment="CENTER" onAction="#handle0Press" maxWidth="Infinity" maxHeight="Infinity">0</Button>
+  <Button GridPane.rowIndex="7" GridPane.columnIndex="4" alignment="CENTER" onAction="#handleDotPress" maxWidth="Infinity" maxHeight="Infinity">.</Button>
+  <Button GridPane.rowIndex="7" GridPane.columnIndex="5" alignment="CENTER" onAction="#handleEqualsPress" maxWidth="Infinity" maxHeight="Infinity">=</Button>
 </GridPane>
