--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -3,8 +3,28 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
 
-<GridPane fx:controller="fxml.Controller" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-  <Label text="Yuno's basic information goes here."/>
-
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToggleGroup?>
+<GridPane fx:controller="fxml.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
+  <GridPane fx:id="GridPane_Welcome" alignment="CENTER" hgap="10" vgap="10">
+    <Label text="Welcome to Yuno, a blatant Uno ripoff. " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Label text="Press Continue to get started" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+    <Button text="Continue" onAction="#Continue_Button" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+  </GridPane>
+  <GridPane fx:id="GridPane_Setup" visible="false" alignment="CENTER" hgap="10" vgap="10">
+    <Label text="How many players would you like in your game?" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="4"/>
+    <fx:define>
+      <ToggleGroup fx:id="PlayerButtons"/>
+    </fx:define>
+    <RadioButton text="1 Player" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
+    <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="2" toggleGroup="$PlayerButtons"/>
+    <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons"/>
+    <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="4" toggleGroup="$PlayerButtons"/>
+    <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="4" onAction="#Continue_To_Game_Button"/>
+  </GridPane>
+  <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
+  <Label text="Game content goes here." />
+  </GridPane>
 </GridPane>
 
