--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -6,11 +6,19 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+
 <GridPane fx:controller="fxml.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
   <GridPane fx:id="GridPane_Welcome" alignment="CENTER" hgap="10" vgap="10">
     <Label text="Welcome to Yuno, a blatant Uno ripoff. " GridPane.columnIndex="1" GridPane.rowIndex="1" />
     <Label text="Press Continue to get started" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
     <Button text="Continue" onAction="#Continue_Button" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+    <ImageView fx:id="background_image" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <image>
+        <Image url="@assets/yuno-card-background.png"/>
+      </image>
+    </ImageView>
   </GridPane>
   <GridPane fx:id="GridPane_Setup" visible="false" alignment="CENTER" hgap="10" vgap="10">
     <Label text="How many players would you like in your game?" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="4"/>
@@ -24,7 +32,10 @@
     <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="4" onAction="#Continue_To_Game_Button"/>
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
-  <Label text="Game content goes here." />
+  <Label text="Game content goes here." GridPane.rowIndex="1"/>
+    <ImageView GridPane.columnIndex="1" GridPane.rowIndex="2" >
+      <Image url="@assets/yuno-card-background.png"/>
+    </ImageView>
   </GridPane>
 </GridPane>
 
