--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -13,31 +13,46 @@
   <GridPane fx:id="GridPane_Welcome" alignment="CENTER" hgap="10" vgap="10">
     <Label text="Welcome to Yuno, a blatant Uno ripoff. " GridPane.columnIndex="1" GridPane.rowIndex="1" />
     <Label text="Press Continue to get started" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-    <Button text="Continue" onAction="#Continue_Button" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-    <ImageView fx:id="background_image" GridPane.columnIndex="1" GridPane.rowIndex="4" rotate="30"/>
+    <Button text="Continue" onAction="#Continue_Button" GridPane.columnIndex="1" GridPane.rowIndex="3" maxWidth="Infinity"/>
+    <ImageView fx:id="background_image" GridPane.columnIndex="1" GridPane.rowIndex="4" />
   </GridPane>
   <GridPane fx:id="GridPane_Setup" visible="false" alignment="CENTER" hgap="10" vgap="10">
     <Label text="How many players would you like in your game?" GridPane.rowIndex="1" GridPane.columnIndex="1" GridPane.columnSpan="4"/>
     <fx:define>
       <ToggleGroup fx:id="PlayerButtons"/>
     </fx:define>
+    <!--
     <RadioButton text="1 Player" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
-    <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="2" toggleGroup="$PlayerButtons"/>
-    <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons"/>
-    <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="4" toggleGroup="$PlayerButtons"/>
-    <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="4" onAction="#Continue_To_Game_Button"/>
+    I'm planning to remove this, as this option doesn't make sense to me
+    -->
+    <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons"/>
+    <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="2" toggleGroup="$PlayerButtons"/>
+    <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons"/>
+    <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="3" onAction="#Continue_To_Game_Button" maxWidth="Infinity"/>
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
-  <Label text="Game content goes here." GridPane.rowIndex="1"/>
-    <ImageView GridPane.columnIndex="1" GridPane.rowIndex="2" >
-      <Image url="@/fxml/assets/yuno-card-background.png" requestedWidth="300" preserveRatio="true" smooth="true" />
-    </ImageView>
+  <Label text="Game content goes here." GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290">
+      <ImageView GridPane.columnIndex="1" GridPane.rowIndex="1" rotate="-5">
+        <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
+      </ImageView>
+      <ImageView GridPane.columnIndex="1" GridPane.rowIndex="2" rotate="3">
+        <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
+      </ImageView>
+      <ImageView GridPane.columnIndex="1" GridPane.rowIndex="3" >
+        <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
+      </ImageView>
+    </GridPane>
   </GridPane>
 </GridPane>
 
 <!--
 In order to display in image using an image view it must have the following structure
-  <ImageView>
-    <Image url="" /> You must use an @ to designate a local file.
+  <ImageView>         Rotation can be added by adding a rotate tag to the imageview. ie rotate="ammount_to_rotate_in_deg"
+    <Image url="" />  You must use an @ to designate a local file. Always, remember to preserveRatio, and to smooth,
+                      if you leave off the smooth, it scales the image, but gives a super jagged render
   </ImageView>
+
+  Formatting Preferences:
+    - Define rowIndex, then colIndex, leave onAction as last
 -->
