--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -32,7 +32,7 @@
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
   <Label text="Game content goes here." GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290">
+    <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290"> <!-- Deck display GridPane -->
       <ImageView GridPane.columnIndex="1" GridPane.rowIndex="1" rotate="-5">
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
@@ -43,7 +43,11 @@
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
     </GridPane>
+    <GridPane> <!-- GridPane for me to play with things... -->
+      <RadioButton />
+    </GridPane>
   </GridPane>
+
 </GridPane>
 
 <!--
