--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -45,7 +45,7 @@
       </ImageView>
     </GridPane>
     <GridPane> <!-- GridPane for me to play with things... -->
-      <ListView orientation="HORIZONTAL" fx:id="PlayerHandListView"/>
+      <ListView orientation="HORIZONTAL" fx:id="PlayerHandListView" cellFactory="CustomListCell"/>
     </GridPane>
   </GridPane>
 
