--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -23,7 +23,7 @@
       <ToggleGroup fx:id="PlayerButtons"/>
     </fx:define>
     <!--
-    <RadioButton text="1 Player" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
+    <RadioButton text="1 fxml.Player" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
     I'm planning to remove this, as this option doesn't make sense to me
     -->
     <RadioButton text="2 Players" GridPane.rowIndex="2" GridPane.columnIndex="1" toggleGroup="$PlayerButtons" selected="true"/>
@@ -33,7 +33,7 @@
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
   <Label text="Game content goes here." GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290"> <!-- Deck display GridPane -->
+    <GridPane GridPane.rowIndex="2" GridPane.columnIndex="1" vgap="-290"> <!-- fxml.Deck display GridPane -->
       <ImageView GridPane.columnIndex="1" GridPane.rowIndex="1" rotate="-5">
         <Image url="@/fxml/assets/yuno-card-background.png" requestedHeight="300" preserveRatio="true" smooth="true" />
       </ImageView>
