Minor changes to get this working, just removed some code that is going to be implemented a different way.
Also added a todo for @saparrish.

--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -45,7 +45,7 @@
       </ImageView>
     </GridPane>
     <GridPane> <!-- GridPane for me to play with things... -->
-      <ListView orientation="HORIZONTAL" fx:id="PlayerHandListView" cellFactory="CustomListCell"/>
+      <ListView orientation="HORIZONTAL" fx:id="PlayerHandListView"/>
     </GridPane>
   </GridPane>
 
