--- a/Yuno/src/fxml/dark_mode.css
+++ b/Yuno/src/fxml/dark_mode.css
@@ -16,25 +16,22 @@
  }
 
  .text-area{
-     -fx-background-color: #2b2b2b;
-     -fx-background-radius: 0;
+   -fx-background-color: #2b2b2b;
+   -fx-background-radius: 0;
   }
-
- .list-cell:filled:selected:focused, .list-cell:filled:selected {
-     -fx-background-color: #a037ff;
-     -fx-text-fill: #a9b7c6;
-     }
 
  .list-view .list-cell:even{
    -fx-background-color: #5C5C64;
-   -fx-text-color: #a9b7c6;
    }
 
  .list-view .list-cell:odd{
  -fx-background-color: #65656E;
- -fx-text-color: #a9b7c6;
  }
 
- .scrollable-element {
+ .list-view .list-cell:selected {
+     -fx-background-color: #0063B1;
+ }
+
+ .list-view .scrollable-element {
   scrollbar-color: red blue;
  }
