--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -8,9 +8,10 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.TextField?>
+
+
 <GridPane fx:controller="fxml.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
   <GridPane fx:id="GridPane_Welcome" alignment="CENTER" hgap="10" vgap="10">
     <Label text="Welcome to Yuno, a blatant Uno ripoff!" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -27,6 +28,27 @@
     <RadioButton text="3 Players" GridPane.rowIndex="2" GridPane.columnIndex="2" toggleGroup="$PlayerButtons"/>
     <RadioButton text="4 Players" GridPane.rowIndex="2" GridPane.columnIndex="3" toggleGroup="$PlayerButtons"/>
     <Button text="Continue" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.columnSpan="3" onAction="#Continue_To_Game_Button" maxWidth="Infinity"/>
+    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Label text="Player 1 Name:" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+      <TextField GridPane.rowIndex="1" GridPane.columnIndex="2"/>
+      <Button text="Set Player 1 Name" GridPane.rowIndex="1" GridPane.columnIndex="3"/>
+
+      <Label text="Player 2 Name:" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+      <TextField GridPane.rowIndex="2" GridPane.columnIndex="2"/>
+      <Button text="Set Player 2 Name" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
+
+      <GridPane visible="false" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.columnSpan="3" fx:id="Player_3_N_GP">
+        <Label text="Player 3 Name:" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+        <TextField GridPane.rowIndex="3" GridPane.columnIndex="2"/>
+        <Button text="Set Player 3 Name" GridPane.rowIndex="3" GridPane.columnIndex="3"/>
+      </GridPane>
+
+      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4" visible="false" GridPane.columnSpan="4" fx:id="Player_4_N_GP">
+        <Label text="Player 4 Name:" GridPane.rowIndex="4" GridPane.columnIndex="1" />
+        <TextField GridPane.rowIndex="1" GridPane.columnIndex="2" />
+        <Button text="Set Player 4 Name" GridPane.rowIndex="1" GridPane.columnIndex="3" />
+      </GridPane>
+    </GridPane>
   </GridPane>
   <GridPane fx:id="GridPane_Game" visible="false" alignment="CENTER" hgap="10" vgap="10">
     <Label fx:id="Player" />
