--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -64,7 +64,7 @@
   </GridPane>
   <GridPane fx:id="gridPaneGame" visible="false" alignment="CENTER" hgap="10" vgap="10">
 
-    <Label fx:id="player" />
+    <Label fx:id="playerLabel" />
 
     <columnConstraints>
       <ColumnConstraints percentWidth="5" hgrow="SOMETIMES"/>
